kubernetes/example/tomcat/tomcat-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tomcat
  namespace: bigdata
  labels:
    app: tomcat
spec:
  # this replicas value is default
  # modify it according to your case
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
    matchExpressions:
      - {key: app, operator: In, values: [tomcat]}
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: tomcat:8.5.24-jre8-alpine
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 100Mi
