kubernetes/example/tomcat/tomcat-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat
  labels:
    svc: tomcat
spec:
  type: NodePort
  selector:
    app: tomcat
  ports:
  - port: 8080
    targetPort: 8080
